websocket-demo/envoy.yaml
node:
  id: envoy-proxy-ws-demo
  cluster: envoy-proxy-ws-demo
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19901
static_resources:
  listeners:
    - name: envoy-proxy-ws-demo-listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 19894
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: http_service
                upgrade_configs:
                  - upgrade_type: websocket
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            path: "/ws"
                          route:
                            cluster: envoy-proxy-ws-demo-cluster
                            upgrade_configs:
                              - upgrade_type: websocket
                        - match:
                            prefix: "/"
                          route:
                            cluster: envoy-proxy-ws-demo-cluster
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: envoy-proxy-ws-demo-cluster
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: envoy-proxy-ws-demo-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
